Unit test and doc